--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -1,5 +1,6 @@
 .footer {
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
+  padding: 96px 80px;
 }
 
 .footer:not(.color-scheme-1) {
